Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase01_03.out
<Expr> ::= this
<Expr> ::= Integer
Parse error on line 4:
...			{ c3 = 4 || - 4 }	}}class C2 ext
----------------------^
Expecting ';', '+', '-', '*', '/', '<', '<=', '>=', '>', '==', '!=', '&&', '||', '.', ')', ','